Fix nav-dropdown-content text align on RTL

--- a/src/css/rtl.css
+++ b/src/css/rtl.css
@@ -51,6 +51,10 @@ td, th {
   color: black;
 }
 
+.nav-dropdown-content a {
+  text-align: right;
+}
+
 /* Sidenav starts from the right */
 .sidenav {
   left: auto;
